fix: fixed images and font not showing

--- a/src/components/commons/navbar/navbar.scss
+++ b/src/components/commons/navbar/navbar.scss
@@ -136,7 +136,7 @@
         left: 0;
         width: 100%;
         height: 60px;
-        background: url(../../../../public/media/button.png) no-repeat;
+        background: url(/media/button.png) no-repeat;
         background-position: center center;
         background-size: contain;
     }
