--- a/src/scss/font-helper.scss
+++ b/src/scss/font-helper.scss
@@ -5,21 +5,21 @@
 // define font and import
 @font-face {
     font-family: 'Qatar';
-    src: url(../../public/media/fonts/Qatar2022Arabic-Medium.woff) format('woff');
+    src: url(/media/fonts/Qatar2022Arabic-Medium.woff) format('woff');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'QatarArabic';
-    src: url(../../public/media/fonts/Qatar2022Arabic-Medium.woff) format('woff');
+    src: url(/media/fonts/Qatar2022Arabic-Medium.woff) format('woff');
     font-weight: 400;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'QatarBold';
-    src: url(../../public/media/fonts/Qatar2022-Bold.woff) format('woff');
+    src: url(/media/fonts/Qatar2022-Bold.woff) format('woff');
     font-weight: 700;
     font-style: normal;
 }
