--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -34,7 +34,7 @@
         left: 0;
         width: 300px;
         height: 120px;
-        background: url(../../public/media/button_c.png) no-repeat;
+        background: url(/media/button_c.png) no-repeat;
         background-position: center center;
         background-size: contain;
     }
@@ -63,7 +63,7 @@
 }
 
 .cooltitle {
-    background-image: url(../../public/media/button_c.png);
+    background-image: url(/media/button_c.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
@@ -74,7 +74,7 @@
 }
 
 .cooltitle2 {
-    background-image: url(../../public/media/button_c.png);
+    background-image: url(/media/button_c.png);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: contain;
